workspace/y.output
   0  $accept : ficheiro $end

   1  ficheiro : declaracoes
   2           |

   3  declaracoes : declaracao
   4              | declaracoes declaracao

   5  declaracao : PUBLIC tipo '*' IDENTIF init ';'
   6             | tipo '*' IDENTIF init ';'
   7             | PUBLIC CONST tipo '*' IDENTIF init ';'
   8             | CONST tipo '*' IDENTIF init ';'
   9             | PUBLIC tipo IDENTIF init ';'
  10             | tipo IDENTIF init ';'
  11             | PUBLIC CONST tipo IDENTIF init ';'
  12             | CONST tipo IDENTIF init ';'
  13             | PUBLIC tipo '*' IDENTIF ';'
  14             | tipo '*' IDENTIF ';'
  15             | PUBLIC CONST tipo '*' IDENTIF ';'
  16             | CONST tipo '*' IDENTIF ';'
  17             | PUBLIC tipo IDENTIF ';'
  18             | tipo IDENTIF ';'
  19             | PUBLIC CONST tipo IDENTIF ';'
  20             | CONST tipo IDENTIF ';'

  21  tipo : INTEGER
  22       | STRING
  23       | NUMBER
  24       | VOID

  25  init : ATRIB INTEGER
  26       | ATRIB CONST STRING
  27       | ATRIB STRING
  28       | ATRIB NUMBER
  29       | ATRIB IDENTIF
  30       | '(' parametros ')' corpo
  31       | '(' parametros ')'
  32       | '(' ')' corpo
  33       | '(' ')'

  34  pars : ',' parametro
  35       | pars ',' parametro

  36  parametros : parametro
  37             | parametro pars

  38  parametro : tipo IDENTIF
  39            | tipo '*' IDENTIF

  40  pars2 : parametro ';'
  41        | pars2 parametro ';'

  42  corpo : '{' '}'
  43        | '{' pars2 '}'
  44        | '{' instrucoes '}'
  45        | '{' pars2 instrucoes '}'

  46  instrucoes : instrucao
  47             | instrucoes instrucao

  48  instrucao : IF expressao THEN instrucao
  49            | IF expressao THEN instrucao ELSE instrucao
  50            | DO expressao WHILE instrucao
  51            | FOR left_value IN expressao UPTO expressao DO instrucao
  52            | FOR left_value IN expressao DOWNTO expressao DO instrucao
  53            | FOR left_value IN expressao UPTO expressao STEP expressao DO instrucao
  54            | FOR left_value IN expressao DOWNTO expressao STEP expressao DO instrucao
  55            | expressao ';'
  56            | corpo
  57            | BREAK INTEGER ';'
  58            | CONTINUE INTEGER ';'
  59            | left_value '#' expressao ';'

  60  expressoes : expressoes ',' expressao
  61             | expressao

  62  expressao : INT
  63            | NUM
  64            | STRN
  65            | left_value
  66            | IDENTIF '(' expressoes ')'
  67            | '(' expressao ')'
  68            | left_value ":=" expressao
  69            | '-' expressao
  70            | INC left_value
  71            | DEC left_value
  72            | left_value INC
  73            | left_value DEC
  74            | expressao '*' expressao
  75            | expressao '/' expressao
  76            | expressao '%' expressao
  77            | expressao '+' expressao
  78            | expressao '-' expressao
  79            | expressao '>' expressao
  80            | expressao '<' expressao
  81            | expressao EQ expressao
  82            | expressao NE expressao
  83            | expressao GE expressao
  84            | expressao LE expressao
  85            | expressao '&' expressao
  86            | expressao '|' expressao
  87            | '~' expressao
  88            | expressao '!'
  89            | '&' left_value
  90            | '*' left_value

  91  left_value : IDENTIF
  92             | IDENTIF '[' expressao ']'

state 0
	$accept : . ficheiro $end  (0)
	ficheiro : .  (2)

	VOID  shift 1
	PUBLIC  shift 2
	CONST  shift 3
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	$end  reduce 2

	ficheiro  goto 7
	declaracoes  goto 8
	declaracao  goto 9
	tipo  goto 10


state 1
	tipo : VOID .  (24)

	.  reduce 24


state 2
	declaracao : PUBLIC . tipo '*' IDENTIF init ';'  (5)
	declaracao : PUBLIC . CONST tipo '*' IDENTIF init ';'  (7)
	declaracao : PUBLIC . tipo IDENTIF init ';'  (9)
	declaracao : PUBLIC . CONST tipo IDENTIF init ';'  (11)
	declaracao : PUBLIC . tipo '*' IDENTIF ';'  (13)
	declaracao : PUBLIC . CONST tipo '*' IDENTIF ';'  (15)
	declaracao : PUBLIC . tipo IDENTIF ';'  (17)
	declaracao : PUBLIC . CONST tipo IDENTIF ';'  (19)

	VOID  shift 1
	CONST  shift 11
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	.  error

	tipo  goto 12


state 3
	declaracao : CONST . tipo '*' IDENTIF init ';'  (8)
	declaracao : CONST . tipo IDENTIF init ';'  (12)
	declaracao : CONST . tipo '*' IDENTIF ';'  (16)
	declaracao : CONST . tipo IDENTIF ';'  (20)

	VOID  shift 1
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	.  error

	tipo  goto 13


state 4
	tipo : INTEGER .  (21)

	.  reduce 21


state 5
	tipo : STRING .  (22)

	.  reduce 22


state 6
	tipo : NUMBER .  (23)

	.  reduce 23


state 7
	$accept : ficheiro . $end  (0)

	$end  accept


state 8
	ficheiro : declaracoes .  (1)
	declaracoes : declaracoes . declaracao  (4)

	VOID  shift 1
	PUBLIC  shift 2
	CONST  shift 3
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	$end  reduce 1

	declaracao  goto 14
	tipo  goto 10


state 9
	declaracoes : declaracao .  (3)

	.  reduce 3


state 10
	declaracao : tipo . '*' IDENTIF init ';'  (6)
	declaracao : tipo . IDENTIF init ';'  (10)
	declaracao : tipo . '*' IDENTIF ';'  (14)
	declaracao : tipo . IDENTIF ';'  (18)

	IDENTIF  shift 15
	'*'  shift 16
	.  error


state 11
	declaracao : PUBLIC CONST . tipo '*' IDENTIF init ';'  (7)
	declaracao : PUBLIC CONST . tipo IDENTIF init ';'  (11)
	declaracao : PUBLIC CONST . tipo '*' IDENTIF ';'  (15)
	declaracao : PUBLIC CONST . tipo IDENTIF ';'  (19)

	VOID  shift 1
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	.  error

	tipo  goto 17


state 12
	declaracao : PUBLIC tipo . '*' IDENTIF init ';'  (5)
	declaracao : PUBLIC tipo . IDENTIF init ';'  (9)
	declaracao : PUBLIC tipo . '*' IDENTIF ';'  (13)
	declaracao : PUBLIC tipo . IDENTIF ';'  (17)

	IDENTIF  shift 18
	'*'  shift 19
	.  error


state 13
	declaracao : CONST tipo . '*' IDENTIF init ';'  (8)
	declaracao : CONST tipo . IDENTIF init ';'  (12)
	declaracao : CONST tipo . '*' IDENTIF ';'  (16)
	declaracao : CONST tipo . IDENTIF ';'  (20)

	IDENTIF  shift 20
	'*'  shift 21
	.  error


state 14
	declaracoes : declaracoes declaracao .  (4)

	.  reduce 4


state 15
	declaracao : tipo IDENTIF . init ';'  (10)
	declaracao : tipo IDENTIF . ';'  (18)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 24
	.  error

	init  goto 25


state 16
	declaracao : tipo '*' . IDENTIF init ';'  (6)
	declaracao : tipo '*' . IDENTIF ';'  (14)

	IDENTIF  shift 26
	.  error


state 17
	declaracao : PUBLIC CONST tipo . '*' IDENTIF init ';'  (7)
	declaracao : PUBLIC CONST tipo . IDENTIF init ';'  (11)
	declaracao : PUBLIC CONST tipo . '*' IDENTIF ';'  (15)
	declaracao : PUBLIC CONST tipo . IDENTIF ';'  (19)

	IDENTIF  shift 27
	'*'  shift 28
	.  error


state 18
	declaracao : PUBLIC tipo IDENTIF . init ';'  (9)
	declaracao : PUBLIC tipo IDENTIF . ';'  (17)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 29
	.  error

	init  goto 30


state 19
	declaracao : PUBLIC tipo '*' . IDENTIF init ';'  (5)
	declaracao : PUBLIC tipo '*' . IDENTIF ';'  (13)

	IDENTIF  shift 31
	.  error


state 20
	declaracao : CONST tipo IDENTIF . init ';'  (12)
	declaracao : CONST tipo IDENTIF . ';'  (20)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 32
	.  error

	init  goto 33


state 21
	declaracao : CONST tipo '*' . IDENTIF init ';'  (8)
	declaracao : CONST tipo '*' . IDENTIF ';'  (16)

	IDENTIF  shift 34
	.  error


state 22
	init : ATRIB . INTEGER  (25)
	init : ATRIB . CONST STRING  (26)
	init : ATRIB . STRING  (27)
	init : ATRIB . NUMBER  (28)
	init : ATRIB . IDENTIF  (29)

	IDENTIF  shift 35
	CONST  shift 36
	INTEGER  shift 37
	STRING  shift 38
	NUMBER  shift 39
	.  error


state 23
	init : '(' . parametros ')' corpo  (30)
	init : '(' . parametros ')'  (31)
	init : '(' . ')' corpo  (32)
	init : '(' . ')'  (33)

	VOID  shift 1
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	')'  shift 40
	.  error

	tipo  goto 41
	parametros  goto 42
	parametro  goto 43


state 24
	declaracao : tipo IDENTIF ';' .  (18)

	.  reduce 18


state 25
	declaracao : tipo IDENTIF init . ';'  (10)

	';'  shift 44
	.  error


state 26
	declaracao : tipo '*' IDENTIF . init ';'  (6)
	declaracao : tipo '*' IDENTIF . ';'  (14)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 45
	.  error

	init  goto 46


state 27
	declaracao : PUBLIC CONST tipo IDENTIF . init ';'  (11)
	declaracao : PUBLIC CONST tipo IDENTIF . ';'  (19)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 47
	.  error

	init  goto 48


state 28
	declaracao : PUBLIC CONST tipo '*' . IDENTIF init ';'  (7)
	declaracao : PUBLIC CONST tipo '*' . IDENTIF ';'  (15)

	IDENTIF  shift 49
	.  error


state 29
	declaracao : PUBLIC tipo IDENTIF ';' .  (17)

	.  reduce 17


state 30
	declaracao : PUBLIC tipo IDENTIF init . ';'  (9)

	';'  shift 50
	.  error


state 31
	declaracao : PUBLIC tipo '*' IDENTIF . init ';'  (5)
	declaracao : PUBLIC tipo '*' IDENTIF . ';'  (13)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 51
	.  error

	init  goto 52


state 32
	declaracao : CONST tipo IDENTIF ';' .  (20)

	.  reduce 20


state 33
	declaracao : CONST tipo IDENTIF init . ';'  (12)

	';'  shift 53
	.  error


state 34
	declaracao : CONST tipo '*' IDENTIF . init ';'  (8)
	declaracao : CONST tipo '*' IDENTIF . ';'  (16)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 54
	.  error

	init  goto 55


state 35
	init : ATRIB IDENTIF .  (29)

	.  reduce 29


state 36
	init : ATRIB CONST . STRING  (26)

	STRING  shift 56
	.  error


state 37
	init : ATRIB INTEGER .  (25)

	.  reduce 25


state 38
	init : ATRIB STRING .  (27)

	.  reduce 27


state 39
	init : ATRIB NUMBER .  (28)

	.  reduce 28


state 40
	init : '(' ')' . corpo  (32)
	init : '(' ')' .  (33)

	'{'  shift 57
	';'  reduce 33

	corpo  goto 58


state 41
	parametro : tipo . IDENTIF  (38)
	parametro : tipo . '*' IDENTIF  (39)

	IDENTIF  shift 59
	'*'  shift 60
	.  error


state 42
	init : '(' parametros . ')' corpo  (30)
	init : '(' parametros . ')'  (31)

	')'  shift 61
	.  error


state 43
	parametros : parametro .  (36)
	parametros : parametro . pars  (37)

	','  shift 62
	')'  reduce 36

	pars  goto 63


state 44
	declaracao : tipo IDENTIF init ';' .  (10)

	.  reduce 10


state 45
	declaracao : tipo '*' IDENTIF ';' .  (14)

	.  reduce 14


state 46
	declaracao : tipo '*' IDENTIF init . ';'  (6)

	';'  shift 64
	.  error


state 47
	declaracao : PUBLIC CONST tipo IDENTIF ';' .  (19)

	.  reduce 19


state 48
	declaracao : PUBLIC CONST tipo IDENTIF init . ';'  (11)

	';'  shift 65
	.  error


state 49
	declaracao : PUBLIC CONST tipo '*' IDENTIF . init ';'  (7)
	declaracao : PUBLIC CONST tipo '*' IDENTIF . ';'  (15)

	ATRIB  shift 22
	'('  shift 23
	';'  shift 66
	.  error

	init  goto 67


state 50
	declaracao : PUBLIC tipo IDENTIF init ';' .  (9)

	.  reduce 9


state 51
	declaracao : PUBLIC tipo '*' IDENTIF ';' .  (13)

	.  reduce 13


state 52
	declaracao : PUBLIC tipo '*' IDENTIF init . ';'  (5)

	';'  shift 68
	.  error


state 53
	declaracao : CONST tipo IDENTIF init ';' .  (12)

	.  reduce 12


state 54
	declaracao : CONST tipo '*' IDENTIF ';' .  (16)

	.  reduce 16


state 55
	declaracao : CONST tipo '*' IDENTIF init . ';'  (8)

	';'  shift 69
	.  error


state 56
	init : ATRIB CONST STRING .  (26)

	.  reduce 26


state 57
	corpo : '{' . '}'  (42)
	corpo : '{' . pars2 '}'  (43)
	corpo : '{' . instrucoes '}'  (44)
	corpo : '{' . pars2 instrucoes '}'  (45)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	IF  shift 74
	VOID  shift 1
	DO  shift 75
	FOR  shift 76
	BREAK  shift 77
	CONTINUE  shift 78
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	'{'  shift 57
	'}'  shift 86
	.  error

	tipo  goto 41
	corpo  goto 87
	parametro  goto 88
	pars2  goto 89
	instrucoes  goto 90
	instrucao  goto 91
	expressao  goto 92
	left_value  goto 93


state 58
	init : '(' ')' corpo .  (32)

	.  reduce 32


state 59
	parametro : tipo IDENTIF .  (38)

	.  reduce 38


state 60
	parametro : tipo '*' . IDENTIF  (39)

	IDENTIF  shift 94
	.  error


state 61
	init : '(' parametros ')' . corpo  (30)
	init : '(' parametros ')' .  (31)

	'{'  shift 57
	';'  reduce 31

	corpo  goto 95


state 62
	pars : ',' . parametro  (34)

	VOID  shift 1
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	.  error

	tipo  goto 41
	parametro  goto 96


state 63
	pars : pars . ',' parametro  (35)
	parametros : parametro pars .  (37)

	','  shift 97
	')'  reduce 37


state 64
	declaracao : tipo '*' IDENTIF init ';' .  (6)

	.  reduce 6


state 65
	declaracao : PUBLIC CONST tipo IDENTIF init ';' .  (11)

	.  reduce 11


state 66
	declaracao : PUBLIC CONST tipo '*' IDENTIF ';' .  (15)

	.  reduce 15


state 67
	declaracao : PUBLIC CONST tipo '*' IDENTIF init . ';'  (7)

	';'  shift 98
	.  error


state 68
	declaracao : PUBLIC tipo '*' IDENTIF init ';' .  (5)

	.  reduce 5


state 69
	declaracao : CONST tipo '*' IDENTIF init ';' .  (8)

	.  reduce 8


state 70
	expressao : INT .  (62)

	.  reduce 62


state 71
	expressao : NUM .  (63)

	.  reduce 63


state 72
	expressao : IDENTIF . '(' expressoes ')'  (66)
	left_value : IDENTIF .  (91)
	left_value : IDENTIF . '[' expressao ']'  (92)

	'('  shift 99
	'['  shift 100
	WHILE  reduce 91
	THEN  reduce 91
	DO  reduce 91
	STEP  reduce 91
	UPTO  reduce 91
	DOWNTO  reduce 91
	GE  reduce 91
	LE  reduce 91
	EQ  reduce 91
	NE  reduce 91
	INC  reduce 91
	DEC  reduce 91
	'|'  reduce 91
	'&'  reduce 91
	'>'  reduce 91
	'<'  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	'%'  reduce 91
	'!'  reduce 91
	')'  reduce 91
	']'  reduce 91
	';'  reduce 91
	','  reduce 91
	'#'  reduce 91
	":="  reduce 91


state 73
	expressao : STRN .  (64)

	.  reduce 64


state 74
	instrucao : IF . expressao THEN instrucao  (48)
	instrucao : IF . expressao THEN instrucao ELSE instrucao  (49)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 101
	left_value  goto 102


state 75
	instrucao : DO . expressao WHILE instrucao  (50)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 103
	left_value  goto 102


state 76
	instrucao : FOR . left_value IN expressao UPTO expressao DO instrucao  (51)
	instrucao : FOR . left_value IN expressao DOWNTO expressao DO instrucao  (52)
	instrucao : FOR . left_value IN expressao UPTO expressao STEP expressao DO instrucao  (53)
	instrucao : FOR . left_value IN expressao DOWNTO expressao STEP expressao DO instrucao  (54)

	IDENTIF  shift 104
	.  error

	left_value  goto 105


state 77
	instrucao : BREAK . INTEGER ';'  (57)

	INTEGER  shift 106
	.  error


state 78
	instrucao : CONTINUE . INTEGER ';'  (58)

	INTEGER  shift 107
	.  error


state 79
	expressao : INC . left_value  (70)

	IDENTIF  shift 104
	.  error

	left_value  goto 108


state 80
	expressao : DEC . left_value  (71)

	IDENTIF  shift 104
	.  error

	left_value  goto 109


state 81
	expressao : '&' . left_value  (89)

	IDENTIF  shift 104
	.  error

	left_value  goto 110


state 82
	expressao : '~' . expressao  (87)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 111
	left_value  goto 102


state 83
	expressao : '-' . expressao  (69)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 112
	left_value  goto 102


state 84
	expressao : '*' . left_value  (90)

	IDENTIF  shift 104
	.  error

	left_value  goto 113


state 85
	expressao : '(' . expressao ')'  (67)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 114
	left_value  goto 102


state 86
	corpo : '{' '}' .  (42)

	.  reduce 42


state 87
	instrucao : corpo .  (56)

	.  reduce 56


state 88
	pars2 : parametro . ';'  (40)

	';'  shift 115
	.  error


state 89
	pars2 : pars2 . parametro ';'  (41)
	corpo : '{' pars2 . '}'  (43)
	corpo : '{' pars2 . instrucoes '}'  (45)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	IF  shift 74
	VOID  shift 1
	DO  shift 75
	FOR  shift 76
	BREAK  shift 77
	CONTINUE  shift 78
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	'{'  shift 57
	'}'  shift 116
	.  error

	tipo  goto 41
	corpo  goto 87
	parametro  goto 117
	instrucoes  goto 118
	instrucao  goto 91
	expressao  goto 92
	left_value  goto 93


state 90
	corpo : '{' instrucoes . '}'  (44)
	instrucoes : instrucoes . instrucao  (47)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	IF  shift 74
	DO  shift 75
	FOR  shift 76
	BREAK  shift 77
	CONTINUE  shift 78
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	'{'  shift 57
	'}'  shift 119
	.  error

	corpo  goto 87
	instrucao  goto 120
	expressao  goto 92
	left_value  goto 93


state 91
	instrucoes : instrucao .  (46)

	.  reduce 46


state 92
	instrucao : expressao . ';'  (55)
	expressao : expressao . '*' expressao  (74)
	expressao : expressao . '/' expressao  (75)
	expressao : expressao . '%' expressao  (76)
	expressao : expressao . '+' expressao  (77)
	expressao : expressao . '-' expressao  (78)
	expressao : expressao . '>' expressao  (79)
	expressao : expressao . '<' expressao  (80)
	expressao : expressao . EQ expressao  (81)
	expressao : expressao . NE expressao  (82)
	expressao : expressao . GE expressao  (83)
	expressao : expressao . LE expressao  (84)
	expressao : expressao . '&' expressao  (85)
	expressao : expressao . '|' expressao  (86)
	expressao : expressao . '!'  (88)

	GE  shift 121
	LE  shift 122
	EQ  shift 123
	NE  shift 124
	'|'  shift 125
	'&'  shift 126
	'>'  shift 127
	'<'  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'!'  shift 134
	';'  shift 135
	.  error


state 93
	instrucao : left_value . '#' expressao ';'  (59)
	expressao : left_value .  (65)
	expressao : left_value . ":=" expressao  (68)
	expressao : left_value . INC  (72)
	expressao : left_value . DEC  (73)

	INC  shift 136
	DEC  shift 137
	'#'  shift 138
	":="  shift 139
	GE  reduce 65
	LE  reduce 65
	EQ  reduce 65
	NE  reduce 65
	'|'  reduce 65
	'&'  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	'!'  reduce 65
	';'  reduce 65


state 94
	parametro : tipo '*' IDENTIF .  (39)

	.  reduce 39


state 95
	init : '(' parametros ')' corpo .  (30)

	.  reduce 30


state 96
	pars : ',' parametro .  (34)

	.  reduce 34


state 97
	pars : pars ',' . parametro  (35)

	VOID  shift 1
	INTEGER  shift 4
	STRING  shift 5
	NUMBER  shift 6
	.  error

	tipo  goto 41
	parametro  goto 140


state 98
	declaracao : PUBLIC CONST tipo '*' IDENTIF init ';' .  (7)

	.  reduce 7


state 99
	expressao : IDENTIF '(' . expressoes ')'  (66)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 141
	left_value  goto 102
	expressoes  goto 142


state 100
	left_value : IDENTIF '[' . expressao ']'  (92)

	INT  shift 70
	NUM  shift 71
	IDENTIF  shift 72
	STRN  shift 73
	INC  shift 79
	DEC  shift 80
	'&'  shift 81
	'~'  shift 82
	'-'  shift 83
	'*'  shift 84
	'('  shift 85
	.  error

	expressao  goto 143
	left_value  goto 102


state 101
	instrucao : IF expressao . THEN instrucao  (48)
	instrucao : IF expressao . THEN instrucao ELSE instrucao  (49)
	expressao : expressao . '*' expressao  (74)
	expressao : expressao . '/' expressao  (75)
	expressao : expressao . '%' expressao  (76)
	expressao : expressao . '+' expressao  (77)
	expressao : expressao . '-' expressao  (78)
	expressao : expressao . '>' expressao  (79)
	expressao : expressao . '<' expressao  (80)
	expressao : expressao . EQ expressao  (81)
	expressao : expressao . NE expressao  (82)
	expressao : expressao . GE expressao  (83)
	expressao : expressao . LE expressao  (84)
	expressao : expressao . '&' expressao  (85)
	expressao : expressao . '|' expressao  (86)
	expressao : expressao . '!'  (88)

	THEN  shift 144
	GE  shift 121
	LE  shift 122
	EQ  shift 123
	NE  shift 124
	'|'  shift 125
	'&'  shift 126
	'>'  shift 127
	'<'  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'!'  shift 134
	.  error


state 102
	expressao : left_value .  (65)
	expressao : left_value . ":=" expressao  (68)
	expressao : left_value . INC  (72)
	expressao : left_value . DEC  (73)

	INC  shift 136
	DEC  shift 137
	":="  shift 139
	WHILE  reduce 65
	THEN  reduce 65
	DO  reduce 65
	STEP  reduce 65
	UPTO  reduce 65
	DOWNTO  reduce 65
	GE  reduce 65
	LE  reduce 65
	EQ  reduce 65
	NE  reduce 65
	'|'  reduce 65
	'&'  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	'!'  reduce 65
	')'  reduce 65
	']'  reduce 65
	';'  reduce 65
	','  reduce 65


state 103
	instrucao : DO expressao . WHILE instrucao  (50)
	expressao : expressao . '*' expressao  (74)
	expressao : expressao . '/' expressao  (75)
	expressao : expressao . '%' expressao  (76)
	expressao : expressao . '+' expressao  (77)
	expressao : expressao . '-' expressao  (78)
	expressao : expressao . '>' expressao  (79)
	expressao : expressao . '<' expressao  (80)
	expressao : expressao . EQ expressao  (81)
	expressao : expressao . NE expressao  (82)
	expressao : expressao . GE expressao  (83)
	expressao : expressao . LE expressao  (84)
	expressao : expressao . '&' expressao  (85)
	expressao : expressao . '|' expressao  (86)
	expressao : expressao . '!'  (88)

	WHILE  shift 145
	GE  shift 121
	LE  shift 122
	EQ  shift 123
	NE  shift 124
	'|'  shift 125
	'&'  shift 126
	'>'  shift 127
	'<'  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'!'  shift 134
	.  error


state 104
	left_value : IDENTIF .  (91)
	left_value : IDENTIF . '[' expressao ']'  (92)

	'['  shift 100
	WHILE  reduce 91
	THEN  reduce 91
	DO  reduce 91
	IN  reduce 91
	STEP  reduce 91
	UPTO  reduce 91
	DOWNTO  reduce 91
	GE  reduce 91
	LE  reduce 91
	EQ  reduce 91
	NE  reduce 91
	'|'  reduce 91
	'&'  reduce 91
	'>'  reduce 91
	'<'  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	'%'  reduce 91
	'!'  reduce 91
	')'  reduce 91
	']'  reduce 91
	';'  reduce 91
	','  reduce 91

